<resources>
    <string name="app_name">Finance</string>
    <string name="title_activity_banks_maps">BanksMapsActivity</string>
    <string name="title_activity_atm_maps">AtmMapsActivity</string>
    <string name="title_activity_test">Test</string>
    <string name="terms_and_conditions">e. NO WARRANTY: YOU EXPRESSLY ACKNOWLEDGE AND AGREE THAT USE OF THE LICENSED
    APPLICATION IS AT YOUR SOLE RISK. TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, THE
    LICENSED APPLICATION AND ANY SERVICES PERFORMED OR PROVIDED BY THE LICENSED
    APPLICATION ARE PROVIDED "AS IS" AND "AS AVAILABLE" WITH ALL FAULTS AND WITHOUT
    WARRANTY OF ANY KIND, AND LICENSOR HEREBY DISCLAIMS ALL WARRANTIES AND CONDITIONS
    WITH RESPECT TO THE LICENSED APPLICATION AND ANY SERVICES, EITHER EXPRESS, IMPLIED, OR
    STATUTORY, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES AND/OR CONDITIONS OF
    MERCHANTABILITY, OF SATISFACTORY QUALITY, OF FITNESS FOR A PARTICULAR PURPOSE, OF
    ACCURACY, OF QUIET ENJOYMENT, AND OF NONINFRINGEMENT OF THIRD-PARTY RIGHTS. NO ORAL
    OR WRITTEN INFORMATION OR ADVICE GIVEN BY LICENSOR OR ITS AUTHORIZED REPRESENTATIVE
    SHALL CREATE A WARRANTY. SHOULD THE LICENSED APPLICATION OR SERVICES PROVE DEFECTIVE,
    YOU ASSUME THE ENTIRE COST OF ALL NECESSARY SERVICING, REPAIR, OR CORRECTION. SOME
    JURISDICTIONS DO NOT ALLOW THE EXCLUSION OF IMPLIED WARRANTIES OR LIMITATIONS ON
    APPLICABLE STATUTORY RIGHTS OF A CONSUMER, SO THE ABOVE EXCLUSION AND LIMITATIONS MAY
    NOT APPLY TO YOU.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">password</string>
    <string name="phone_number">Phone number</string>
    <string name="about_terms_and_conditions">About terms and conditions</string>
    <string name="accept_conditions">Accept Conditions</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset">Reset</string>

    <string name="title_activity_profile">Profile</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="map_not_ready">Map is not ready yet</string>
    <string name="filter_map">City</string>

    <string name="Beer_Sheva">באר שבע</string>
    <string name="Tel_Aviv">תל אביב</string>
    <string name="Jerusalem">ירושלים</string>
    <string name="Haifa">חיפה</string>
    <string name="Rishon">ראשון לציון</string>
    <string name="P_tikva">פתח תקווה</string>
    <string name="Ashdod">אשדוד</string>
    <string name="Netanaya">נתניה</string>
    <string name="Eilat">אילת</string>
    <string name="Holon">חולון</string>

    <string name="Default_City">הכל</string>
    <string name="Default_Bank">הכל</string>

    <string name="union_bank">בנק אגוד לישראל בע״מ</string>
    <string name="bank_ostar">בנק אוצר החייל בע״מ</string>
    <string name="bank_yahav">בנק יהב לעובדי המדינה בע״מ</string>
    <string name="bank_jerusalem">בנק ירושלים בע״מ</string>
    <string name="leumi_bank">בנק לאומי לישראל בע״מ</string>
    <string name="mizrahi_tefahot">בנק מזרחי טפחות בע״מ</string>
    <string name="poalim_bank">בנק פועלים אגודת ישראל בע״מ</string>
    <string name="mercantile_bank">בנק מרכנתיל דיסקונט בע״מ</string>
    <string name="yovnak_bank">יובנק בע״מ</string>

    <string name="stroke_pattern">Bank</string>

    <string name="buy_button">Buy</string>
    <string name="lauren_nobel">Lauren Nobel</string>
    <string name="merchant_id_not_set_message"><![CDATA[To request a Google Pay nonce, replace <b>ConfigHelper.GOOGLE_PAY_MERCHANT_ID</b> with your Google Pay Merchant ID.]]></string>
    <string name="merchant_id_not_set_title">Missing Google Pay Merchant ID</string>
    <string name="missing_application_id_message"><![CDATA[Please update <b>sqip.SQUARE_APPLICATION_ID</b> in <b>AndroidManifest.xml</b> if you want to be able to create a nonce.]]></string>
    <string name="missing_application_id_title">Missing Square Application ID</string>
    <string name="network_failure_title">Network Error</string>
    <string name="network_failure">There was an error processing the payment, please check your network connection.</string>
    <string name="pay_with_card">Pay with card</string>
    <string name="place_your_order">Place your order</string>
    <string name="price">$1.00</string>
    <string name="refund_helper_text">You can refund this transaction through contact us page.</string>
    <string name="retry">Retry</string>
    <string name="server_host_not_set_message"><![CDATA[Check logcat <b>Info</b> messages for a CURL command to charge the nonce, or replace <b>ConfigHelper.CHARGE_SERVER_HOST</b> with your server host.]]></string>
    <string name="server_host_not_set_title">Nonce generated but not charged</string>
    <string name="ship_to">Ship to</string>
    <string name="successful_order_message">Now you are one of a kind.</string>
    <string name="successful_order_title">Your order was successful</string>
    <string name="total">Total</string>
    <string name="unsuccessful_order">Your order was not successful</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>