<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageButton
                android:id="@+id/back"
                style="@style/back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/firstName"
                style="@style/text_box"
                android:layout_marginBottom="30dp"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/lastName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/lastName"
                style="@style/text_box"
                android:layout_marginBottom="30dp"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/emailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/emailAddress"
                style="@style/text_box"
                android:layout_marginBottom="30dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/password"
                style="@style/text_box"
                android:layout_marginBottom="30dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/phoneNumber"
                style="@style/text_box"
                android:layout_marginBottom="30dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                app:layout_constraintBottom_toTopOf="@+id/terms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/register"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/useTerms"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/about_terms_and_conditions"
                    android:textColor="#FFF3B533"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept_conditions" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register"
                style="@style/button"
                android:layout_marginBottom="15dp"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</FrameLayout>
