<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/order_sheet_padding">

        <ImageButton
            android:id="@+id/close_sheet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/button_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:text="@string/place_your_order"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


        <androidx.appcompat.widget.ActionMenuView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="50dp"
                android:paddingTop="20dp"
                android:paddingEnd="32dp"
                android:text="@string/total"
                android:textColor="@color/colorSheetLabel"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingRight="50dp"
                android:text="@string/price"
                android:textColor="@color/colorSheetValue"
                android:textSize="16sp" />

        </androidx.appcompat.widget.ActionMenuView>


        <TextView
            android:id="@+id/refund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:paddingTop="30dp"
            android:text="@string/refund_helper_text"
            android:textColor="@color/colorSheetInfo"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="1.0" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp">

        </Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pay_with_card_button"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_weight="1.0"
                android:background="@drawable/google_pay_button"
                android:text="@string/pay_with_card" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>

            <ImageButton
                android:id="@+id/pay_with_google_button"
                style="@style/CustomButton"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_weight="1.0"
                android:background="@drawable/google_pay_button"
                android:enabled="false"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_google_pay" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp">

        </Space>

    </LinearLayout>


</ScrollView>
