<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pages.EditProfile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageButton
                android:id="@+id/back"
                style="@style/back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/option"
                style="@style/option_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 />

            <EditText
                android:id="@+id/firstName_e"
                style="@style/text_box"
                android:layout_marginBottom="30dp"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/lastName_e"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/lastName_e"
                style="@style/text_box"
                android:layout_marginBottom="30dp"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/emailAddress_e"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/emailAddress_e"
                style="@style/text_box"
                android:layout_marginBottom="30dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/phoneNumber_e"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

<!--            <EditText-->
<!--                android:id="@+id/old_password_e"-->
<!--                style="@style/text_box"-->
<!--                android:layout_marginBottom="30dp"-->
<!--                android:hint="old password"-->
<!--                android:inputType="textPassword"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/new_password_e"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent" />-->


<!--            <EditText-->
<!--                android:id="@+id/new_password_e"-->
<!--                style="@style/text_box"-->
<!--                android:layout_marginBottom="30dp"-->
<!--                android:hint="new password"-->
<!--                android:inputType="textPassword"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/phoneNumber_e"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent" />-->

            <EditText
                android:id="@+id/phoneNumber_e"
                style="@style/text_box"
                android:layout_marginBottom="150dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                app:layout_constraintBottom_toTopOf="@+id/apply_e"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/apply_e"
                style="@style/button"
                android:layout_marginBottom="28dp"
                android:text="apply"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>